--- a/style.css/main.css
+++ b/style.css/main.css
@@ -36,6 +36,9 @@ ul {
 
 body {
   margin: 0;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--white-bg-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
@@ -145,7 +148,7 @@ header {
 /* ==========================Стили для  секции Герой=========================== */
 .hero-title {
   margin: 0 0 46px;
-  padding-top: 200px;
+  /* padding-top: 200px; */
   color: var(--white-bg-color);
   font-weight: 700;
   font-size: 44px;
@@ -153,8 +156,6 @@ header {
   text-align: center;
   letter-spacing: 0.06em;
 }
-
-/* Свойства секции Герой  -   Удалил*/
 
 /* Стиль кнопки героя */
 .hero .button {
@@ -175,6 +176,15 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 200px;
+  padding-top: 200px;
+  background-color: rgba(47, 48, 58, 0.8);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/hero-bg.jpg);
 }
 
 /* ================================Свойства блока Преимущества====================== */
@@ -576,4 +586,16 @@ footer {
   color: var(--white-bg-color);
   background-color: var(--accent-color-blue);
   border: none;
+}
+
+/* ================== Утилита============================ */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
