--- a/style.css/main.css
+++ b/style.css/main.css
@@ -21,6 +21,7 @@
 
 html {
   box-sizing: border-box;
+  max-width: 1600px;
 }
 
 *,
@@ -48,7 +49,6 @@ ul {
 
 body {
   margin: 0;
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--white-bg-color);
@@ -150,11 +150,28 @@ body {
 /* Навигация флекс-бокс контакты */
 .navBox-contacts {
   display: flex;
-  align-items: center;
+  align-items: center; /*    проверить baseline*/
 }
 
 header {
   border-bottom: 2px solid #ececec;
+}
+
+/* SVG icons */
+.decoration {
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+/* Контакты левый отступ от иконки */
+.nav-contacts span {
+  padding-left: 10px;
+}
+
+.contacts.nav-font {
+  display: flex;
 }
 
 /* ==========================Стили для  секции Герой=========================== */
