--- a/style.css/main.css
+++ b/style.css/main.css
@@ -387,6 +387,11 @@ header {
   justify-content: center;
 }
 
+.team-links:hover {
+  fill: var(--white-bg-color);
+  background-color: var(--accent-color-blue);
+}
+
 .our-team-links > li:not(:last-child) {
   margin-right: 10px;
 }
