--- a/style.css/main.css
+++ b/style.css/main.css
@@ -407,7 +407,7 @@ header {
 /* Стили ссылок на соцсети */
 .social-links {
   text-decoration: none;
-  color: var(--primary-text-color); /* --- цвет иконок в ссылках---*/
+  color: #afb1b8; /* --- цвет иконок в ссылках---*/
 }
 
 /* Стили SVG иконок соцсетей */
@@ -450,7 +450,43 @@ header {
   margin-bottom: 0px;
   text-align: center;
   display: flex;
+  justify-content: space-between;
+}
+
+/* Стили списка li */
+.clients-list {
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 5px;
+}
+
+/* ==========Отступы иконок SVG============= */
+.company-1 {
+  margin-top: 20px;
+}
+
+.company-2 {
+  margin-top: 19px;
+}
+
+.company-3 {
+  margin-top: 24px;
+}
+
+.company-4 {
+}
+
+.company-5 {
+  width: 100%;
+  height: 100%;
+}
+
+.company-6 {
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 /* Правый отступ списка компаний */
