--- a/style.css/main.css
+++ b/style.css/main.css
@@ -474,12 +474,8 @@ header {
   margin-top: 24px;
 }
 
-.company-4 {
-}
-
 .company-5 {
-  width: 100%;
-  height: 100%;
+  margin-top: 10px;
 }
 
 .company-6 {
