--- a/style.css/main.css
+++ b/style.css/main.css
@@ -612,6 +612,11 @@ footer {
   margin-right: 11px;
 }
 
+.footer-social-list {
+  width: 44px;
+  height: 44px;
+}
+
 /* Отступы поля форма футер ========= Блок Форма=============== */
 /* Отступы блока Форма */
 .footerMail-box {
