--- a/style.css/main.css
+++ b/style.css/main.css
@@ -601,20 +601,19 @@ footer {
   margin-bottom: 0;
 }
 
-/* Ссылки на соц.сети в футере  */
+/* Стили ссылок на соц.сети в футере  */
 .footerSocialLinks {
-  text-decoration: none;
-  color: var(--primary-text-color);
-  display: inline-block;
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
 }
 /* Отступы  справа соц.ссылок футера */
 .footer-social-list:not(:last-child) {
-  margin-right: 11px;
-}
-
-.footer-social-list {
-  width: 44px;
-  height: 44px;
+  margin-right: 10px;
 }
 
 /* Отступы поля форма футер ========= Блок Форма=============== */
