Add элемент  Current page в навигации

--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -6,6 +6,24 @@
   --primary-text-color: #757575;
 }
 
+/* Нижний border хедера - важен для portfolio.html */
+header {
+  max-width: 1600px;
+  border-bottom: 2px solid #ececec;
+}
+
+/* Current page */
+.current::after {
+  content: "";
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color-blue);
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
 /* Примеры работ Стили ссылок Фильтров */
 .filer {
   padding-left: 22px;
