--- a/style.css/main.css
+++ b/style.css/main.css
@@ -132,6 +132,7 @@ body {
 }
 
 .nav-list {
+  position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -168,6 +169,18 @@ body {
 /* Флекс контейнер для ссылки <а> */
 .contacts.nav-font {
   display: flex;
+}
+
+/* Current page */
+.current::after {
+  content: "";
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color-blue);
+  border-radius: 2px;
+  margin-top: 28px;
 }
 
 /* ==========================Стили для  секции Герой=========================== */
