--- a/style.css/main.css
+++ b/style.css/main.css
@@ -385,6 +385,8 @@ body {
   display: inline-block;
   width: 274px;
   background-color: var(--white-bg-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 /* Отступы имен членов команды */
@@ -667,6 +669,7 @@ footer {
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  padding: 18px 12px;
 }
 /* Стили кнопки в футере */
 .footer .button {
