--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -143,6 +143,8 @@ header {
   position: absolute;
   opacity: 0;
   margin: 0;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 /* Текст в скрытом блоке на карточке */
